force-app/main/default/objects/Integration_Log__c/fields/Business_process__c.field-meta.xml
<CustomField>
    <fullName>Business_process__c</fullName>
    <label>Business process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSSU Company creation in BE</fullName>
            </value>
            <value>
                <fullName>Marketing and Sales Triggers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>