force-app/main/default/objects/Integration_Log__c/fields/Request_payload__c.field-meta.xml
<CustomField>
    <fullName>Request_payload__c</fullName>
    <label>Request payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>