force-app/main/default/objects/Integration_Log__c/fields/Response_payload__c.field-meta.xml
<CustomField>
    <fullName>Response_payload__c</fullName>
    <label>Response payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>