force-app/main/default/objects/Integration_Log__c/fields/Systems_involved__c.field-meta.xml
<CustomField>
    <fullName>Systems_involved__c</fullName>
    <label>Systems involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>