force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_payload__c</columns>
    <columns>Request_payload__c</columns>
    <columns>Business_process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>