force-app/main/default/objects/Integration_Log__c/listViews/Marketing_and_Sales_Trigger.listView-meta.xml
<ListView>
    <fullName>Marketing_and_Sales_Trigger</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_payload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_process__c</field>
        <operation>equals</operation>
        <value>Marketing and Sales Triggers</value>
    </filters>
    <label>Marketing and Sales Trigger</label>
</ListView>