force-app/main/default/objects/Integration_Log__c/listViews/RO_1520.listView-meta.xml
<ListView>
    <fullName>RO_1520</fullName>
    <columns>NAME</columns>
    <columns>Request_payload__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_process__c</field>
        <operation>equals</operation>
        <value>Marketing and Sales Triggers</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/17/2023 12:00 AM</value>
    </filters>
    <label>RO-1520</label>
</ListView>