force-app/main/default/objects/Integration_Log__c/listViews/SSSU.listView-meta.xml
<ListView>
    <fullName>SSSU</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_process__c</field>
        <operation>equals</operation>
        <value>SSSU Company creation in BE</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/13/2025 12:00 AM</value>
    </filters>
    <label>SSSU</label>
</ListView>